# spacelift-manager

./: .gitignore  README.md  gitversion.yaml
.github/workflows/: release.yml
deployments/helm/: README.md
deployments/helm/spacelift-manager/: Chart.yaml  values.yaml
deployments/helm/spacelift-manager/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
deployments/helm/spacelift-manager/templates/tests/: test-connection.yaml
deployments/terraform/: README.md
src/: Dockerfile  app.py  http-client.env.json  pyproject.toml  request.http  run.bash
src/dto/: __init__.py  apply.py  runTrigger.py
src/spacelift/: client.py  service.py  spacelift_service.py
