[tool.poetry]
name = "devops-app"
version = "0.1.0"
description = "A FastAPI application for devops sample"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {version = ">=0.119.0,<0.120.0"}
uvicorn = {extras = ["standard"], version = ">=0.37.0,<0.38.0"}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
httpx = ">=0.28.1,<0.29.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"